空オブジェクト
isEmpty()や空オブジェクト